# scratch-gpro1

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/fromscratch/: AppScreen.kt  AppUI.kt  AppViewModel.kt  MainActivity.kt
app/src/main/java/com/example/fromscratch/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/fromscratch/: AppViewModelTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
